# Neurips2026

./: .gitignore  agent.py  idea.md  logger.py  main.py  models.py  pyproject.toml  replay_memory.py  wrapper.py
DIAYN/: main.py
DIAYN/Common/: __init__.py  config.py  logger.py
common_net/: activations.py  common.py  moe.py  rotary.py  utils.py
common_net/attentions/: __init__.py  att_block.py  base_attn.py  linear_attn.py  mha.py
common_net/pos_embedding/: base.py  rotary.py  sinusoidal_positonal.py
ours/: __init__.py  agent.py  buffer.py  config.py  logger.py  main.py  wrapper.py
ours/models/: __init__.py  common.py  critic.py  disc.py  mlp_disc.py  policy.py
