[project]
name = "neurips2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d, mujoco]>=1.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "torch>=2.10.0",
    "wandb>=0.25.1",
    "tensorboard>=2.20.0",
    "torch-tb-profiler>=0.4.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
